fixed overflow of featured works

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Fredoka', sans-serif;
 }
 nav{
     min-height: 10vh;
@@ -258,7 +263,7 @@ footer div{
           text-align: center;
       }
       .imgfw img {
-        width: 335px;
+        width: 100%;
         height: 230px;
         border-radius: 15px;
       }
